Update favicon and portfolio content - remove favicon, clean browser tab title

--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -33,7 +33,7 @@ jobs:
           ###### End of Repository/Build Configurations ######
         env:
           # Environment variables for build process
-          NODE_VERSION: '18'
+          NODE_VERSION: "18"
 
   close_pull_request_job:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
