--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clean": "rimraf node_modules package-lock.json"
   },
   "dependencies": {
+    "framer-motion": "^12.23.26",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
